Refactor configuration and logging; enhance HTTP request logging and database schema for improved auditability

--- a/config.json
+++ b/config.json
@@ -8,6 +8,8 @@
         "tags",
         "users"
     ],
-    "db_name": "wpspider.db",
+    "db_name": null,
+    "output_directory": null,
+    "user_agent": "WPSpider/1.0 (Nebula Crawler; +https://wpspider.local)",
     "log_file": "wpspider.log"
 }
